--- a/src/app/angular-material/add-user-form/add-user-form.component.html
+++ b/src/app/angular-material/add-user-form/add-user-form.component.html
@@ -3,52 +3,52 @@
           <div class="col-12">
             <div class="card radius-10 Formcard">
               <div class="card-body">
-                <form>
+                <form [formGroup]="AngularMaterialForm">
                     <h2 class="mb-0 mt-4 text-center">USER INFORMATION</h2>
                     <hr>
                     <div class="row g-3">
                       <div class="col-4">
                          <label class="form-label text-secondary">FirstName</label>
-                         <input type="text" class="form-control"  formControlName="name">
+                         <input type="text" class="form-control"  formControlName="first_name">
                       </div>
                       <div class="col-4">
                         <label class="form-label text-secondary">LastName</label>
-                        <input type="text" class="form-control"  formControlName="name">
+                        <input type="text" class="form-control"  formControlName="last_name">
                      </div>
                       <div class="col-4">
                        <label class="form-label text-secondary">Email address</label>
-                       <input type="text" class="form-control" formControlName="email" >
+                       <input type="text" class="form-control" formControlName="email_address" >
                      </div>
                        <div class="col-4">
                          <label class="form-label text-secondary">Education</label>
-                         <input type="text" class="form-control"  formControlName="first_name">
+                         <input type="text" class="form-control"  formControlName="education">
                      </div>
                      <div class="col-4">
                          <label class="form-label text-secondary">House No#</label>
-                         <input type="text" class="form-control" formControlName="last_name">
+                         <input type="text" class="form-control" formControlName="house_no">
                      </div>
                      <div class="col-4">
                         <label class="form-label text-secondary">Last Name</label>
-                        <input type="text" class="form-control" formControlName="last_name">
+                        <input type="text" class="form-control" formControlName="last_name_2">
                     </div>
                    </div>
 
 
                    <div class="row g-3 mt-3">
                      <div class="col-4">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" formControlName="checkbox_1">
                         <label class="form-check-label ms-2" for="flexCheckDefault">
                         checkbox-1
                         </label>
                    </div>
                    <div class="col-4">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" formControlName="checkbox_2">
                     <label class="form-check-label ms-2" for="flexCheckDefault">
                        checkbox-2
                     </label>
                    </div>
                    <div class="col-4">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" formControlName="checkbox_3">
                     <label class="form-check-label ms-2" for="flexCheckDefault">
                       checkbox-3
                     </label>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="col-6">
                         <label class="form-label text-secondary">Last Name</label>
-                        <input type="text" class="form-control" formControlName="last_name">
+                        <input type="text" class="form-control" formControlName="last_name_3">
                     </div>
                     <div class="col-12">
                       <label class="form-label text-secondary">About Me</label>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="text-start mt-3">
                         <button class="btn btn-danger" (click)="close()">Cancel</button>
-                      <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
+                      <button (click)="Submit()" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
                     </div>
                     </form>
               </div>
