--- a/src/app/angular-material/state-crud/state-crud.component.html
+++ b/src/app/angular-material/state-crud/state-crud.component.html
@@ -3,7 +3,7 @@
 <div class="card mt-5 text-light" style="background-color: #172b4d;">
   <div class="card-body">
     <div class="d-flex align-items-center">
-       <h5 class="mb-0">Dark Table</h5>
+       <h5 class="mb-0">User List Table</h5>
     </div>
     <div class="table-responsive mt-3">
       <table class="table align-middle mb-0">
