--- a/src/app/angular-material/state-crud/state-crud.component.html
+++ b/src/app/angular-material/state-crud/state-crud.component.html
@@ -9,7 +9,10 @@
       <table class="table align-middle mb-0">
         <thead class="table" style="background-color: #172b4d;">
          <tr class="tablerow">
-           <th>Project</th>
+           <th>First Name</th>
+           <th>First Name</th>
+           <th>Education</th>
+           <th>City</th>
            <th>Photo</th>
            <th>Product ID</th>
            <th>Status</th>
@@ -19,6 +22,9 @@
          </tr>
          </thead>
          <tbody class="text-light"><tr>
+          <td>Argon Design System</td>
+          <td>Argon Design System</td>
+          <td>Argon Design System</td>
           <td>Argon Design System</td>
           <td><img src="../../../assets/assets/angular.jpg" class="product-img-2 w-40 h-40" alt="product img"></td>
           <td>#9405822</td>
