--- a/src/app/angular-material/state-crud/state-crud.component.html
+++ b/src/app/angular-material/state-crud/state-crud.component.html
@@ -25,11 +25,11 @@
          </thead>
          <tbody class="text-light" *ngFor="let UserList of UserListData"><tr>
           <td>{{UserList.first_name}}</td>
-          <td>Argon Design System</td>
-          <td>Argon Design System</td>
-          <td>Argon Design System</td>
-          <td>Argon Design System</td>
-          <td>Argon Design System</td>
+          <td>{{UserList.last_name}}</td>
+          <td>{{UserList.education}}</td>
+          <td>{{UserList.city}}</td>
+          <td>{{UserList.country}}</td>
+          <td>{{UserList.pin_code}}</td>
           <!-- <td><img src="../../../assets/assets/angular.jpg" class="product-img-2 w-40 h-40" alt="product img"></td>
           <td>#9405822</td>
           <td><span class="badge bg-light-success text-success w-100">Paid</span></td>
