--- a/src/app/angular-bootstrap/crud-main/crud-main.component.html
+++ b/src/app/angular-bootstrap/crud-main/crud-main.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-8">
+<!-- <div class="col-lg-8">
     <div class="row">
       <div class="col-lg-12">
         <div class="card radius-10 Formcard">
@@ -79,4 +79,32 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
+  <h1 class="text-center mt-4">USER - LISTING !</h1>
+  <h4 class="text-center mt-4">User-<span style="color:#FFB000 ;">Data</span>-Analytics</h4>
+  <table class="table table-striped table-hover table-sm">
+      <thead class="text-dark">
+        <tr>
+          <th class="text-center">#</th>
+          <th class="text-center">first_name</th>
+          <th class="text-center">last_name</th>
+          <th class="text-center">country</th>
+          <th class="text-center">pin_code</th>
+          <th class="text-center" colspan="2">Actions</th>
+  
+        </tr>
+      </thead>
+      <tbody class="text-dark">
+        <tr >
+          <th class="text-center"></th>
+          <td class="text-center text-dark"></td>
+          <td class="text-center"></td>
+          <td class="text-center" ></td>
+          <td class="text-center"></td>
+          <td ><i class="fa fa-pencil text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" ></i></td>
+      
+          <td class="text-center"><button class="btn btn-outline-danger" >Hard Delete</button></td>
+        </tr>
+      </tbody>
+    </table>
