--- a/src/app/angular-bootstrap/testing-com/testing-com.component.html
+++ b/src/app/angular-bootstrap/testing-com/testing-com.component.html
@@ -35,3 +35,10 @@
     <button class="btn btn-success mt-5" type="submit">Submit Form</button>
 </form>
 </app-layout>
+
+
+<!-- Concept of Custom Directive -->
+
+<!-- Let us first know that what directives are in angular? -->
+<!-- Directives are classes that gives our html additional features like *ngIf *ngFor [ngClass]..etc even we can make 
+custom directive as well -->
