--- a/src/app/angular-bootstrap/directive/directive.component.html
+++ b/src/app/angular-bootstrap/directive/directive.component.html
@@ -13,6 +13,6 @@
 <h2>1: Component Directive</h2>
 <h3>Component directive are most common used directives <br>
 when you create a component so @Component decorator has the metadata<br>
-of the for the component in which it has selector , template , style
+of the  component in which it has selector , template , style
 Click here to see the example <h2 style="cursor: pointer;" routerLink="../component-directive" class="text-success" >Component Directive</h2></h3>
 </div>
