--- a/src/app/angular-bootstrap/directive/directive.component.html
+++ b/src/app/angular-bootstrap/directive/directive.component.html
@@ -16,3 +16,12 @@ when you create a component so @Component decorator has the metadata<br>
 of the  component in which it has selector , template , style
 Click here to see the example <h2 style="cursor: pointer;" routerLink="../component-directive" class="text-success" >Component Directive</h2></h3>
 </div>
+
+<!-- Structural Directives -->
+<div class="mt-5 ms-5">
+    <h2>2: Structural Directive</h2>
+    <h3>Structural directives are type of directives that actually<br>
+    allows you to manipulate the DOM(document object model)based on conditions<br>
+    like we use<b>*ngFor  , *ngIf , *ngSwitchCase</b> 
+    Click here to see the example <h2 style="cursor: pointer;" routerLink="../structural-directive" class="text-success" >Structural Directive</h2></h3>
+    </div>
