--- a/src/app/angular-bootstrap/directive/directive.component.html
+++ b/src/app/angular-bootstrap/directive/directive.component.html
@@ -22,6 +22,7 @@ Click here to see the example <h2 style="cursor: pointer;" routerLink="../compon
     <h2>2: Structural Directive</h2>
     <h3>Structural directives are type of directives that actually<br>
     allows you to manipulate the DOM(document object model)based on conditions<br>
-    like we use<b>*ngFor  , *ngIf , *ngSwitchCase</b> 
+    like we use<b>*ngFor  , *ngIf , *ngSwitchCase</b> these are basically structural-directive<br>
+    but we can make our custom structural-directive as well
     Click here to see the example <h2 style="cursor: pointer;" routerLink="../structural-directive" class="text-success" >Structural Directive</h2></h3>
     </div>
