--- a/src/app/angular-bootstrap/directive/directive.component.html
+++ b/src/app/angular-bootstrap/directive/directive.component.html
@@ -10,7 +10,7 @@
 
 <!-- Component Directives -->
 <div class="mt-5 ms-5">
-<h2>1: Component Directive</h2>
+<h2 *StructuralDirective="'admin'" >1: Component Directive</h2>
 <h3>Component directive are most common used directives <br>
 when you create a component so @Component decorator has the metadata<br>
 of the  component in which it has selector , template , style
