--- a/src/app/angular-bootstrap/directive/directive.component.html
+++ b/src/app/angular-bootstrap/directive/directive.component.html
@@ -26,3 +26,14 @@ Click here to see the example <h2 style="cursor: pointer;" routerLink="../compon
     but we can make our custom structural-directive as well
     Click here to see the example <h2 style="cursor: pointer;" routerLink="../structural-directive" class="text-success" >Structural Directive</h2></h3>
     </div>
+
+
+<!-- Attribute Directives -->
+<div class="mt-5 ms-5">
+    <h2>3: Attribute Directive</h2>
+    <h3>Attribute directives are type of directives that actually change the behavior<br>
+    and appearance of your element in DOM<br>
+    like we use<b>[ngClass] , [ngStyle]</b> these are basically attributive-directives<br>
+    but we can make our custom attributive-directive as well
+    Click here to see the example <h2 style="cursor: pointer;" routerLink="../attribute-directive" class="text-success" >Attribute Directive</h2></h3>
+    </div>    
