--- a/src/app/angular-bootstrap/types-of-directive/attribute-directive/attribute-directive.component.html
+++ b/src/app/angular-bootstrap/types-of-directive/attribute-directive/attribute-directive.component.html
@@ -1,16 +1,14 @@
-<h1 class="text-center mt-5" AttributiveDirective>Welcome to Component directive</h1>
+<h1 class="text-center mt-5" >Welcome to attribute-directive</h1>
     <h2 class="text-center">
-      You must be wondering i'm using html template file right? bruhh 💀
+      Now you must be thinking here I change the color of whole <br>
+      explanation with style? Lol Hell no!! 💀
     </h2>
     <div class="dog_meme">
-    <img  src="../assets/pic/meme dog.png"   />
+    <img class="dog_meme" src="../../../../assets/pic/dog_meme2.png" width="280px"  />
     </div>
-    <h2 class="text-center">Go check Component directive.ts file</h2>
-    <h3 class="mt-5 text-center">
-      Now here if you can see i comment out the templateUrl which actually bind
-      the file of .html and manipulating <br />
-      my html from here it clears that @component directive gives us template
-      selector and style by which <br /> we can manipulate our DOM and @component
-      is our decorator which has metadata in which it gives us
-      selector,template,style
+    <h2 class="text-center">Go check attributive directive.html file</h2>
+    <h3 AttributiveDirective class="mt-5 text-center">
+      Now here if you can see i'm using attribute inside my h3 tag<br />
+      this is my custom attributive directive <br /> by which i can change the 
+      behavior and appearance of my element that's what attributive directive do
     </h3>
