--- a/src/app/angular-material/add-edit-api/add-edit-api.component.html
+++ b/src/app/angular-material/add-edit-api/add-edit-api.component.html
@@ -1,1 +1,5 @@
-<p>add-edit-api works!</p>
+<ng-container>
+    <div class="d-flex justify-content-end">
+    <button class="btn btn-danger btn-sm me-4 mt-2" (click)="close()">close</button>
+</div>
+</ng-container>
