--- a/src/app/angular-material/api/api.component.html
+++ b/src/app/angular-material/api/api.component.html
@@ -30,3 +30,10 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+ 
+  <div class="container">
+
+  <div #paymentRef>
+
+  </div>
+</div>
