--- a/src/app/angular-material/api/api.component.css
+++ b/src/app/angular-material/api/api.component.css
@@ -1,6 +1,6 @@
-.container {
+/* .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50vh; /* Adjust this if needed */
-  }
+    height: 50vh;
+  } */
