--- a/src/app/angular-bootstrap/header/header.component.html
+++ b/src/app/angular-bootstrap/header/header.component.html
@@ -26,6 +26,9 @@
             <a class="nav-link active" aria-current="page" routerLink="./directive">Directive</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="./dynamic-forms">Dynamic Forms</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
           <li class="nav-item dropdown">
