--- a/src/app/angular-bootstrap/dynamic-forms/dynamic-forms.component.html
+++ b/src/app/angular-bootstrap/dynamic-forms/dynamic-forms.component.html
@@ -1,1 +1,71 @@
-<p>dynamic-forms works!</p>
+<div class="container">
+    <div class="col-lg-8">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="card radius-10 Formcard">
+              <div class="card-body">
+                <form [formGroup]="user_Info" (ngSubmit)="submit()">
+                    <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
+                    <hr>
+                    <div class="row g-3">
+                      <div class="col-6">
+                         <label class="form-label text-secondary">Username</label>
+                         <input type="text" class="form-control"  formControlName="name">
+                      </div>
+                      <div class="col-6">
+                       <label class="form-label text-secondary">Email address</label>
+                       <input type="text" class="form-control" formControlName="email" >
+                     </div>
+                       <div class="col-6">
+                         <label class="form-label text-secondary">First Name</label>
+                         <input type="text" class="form-control"  formControlName="first_name">
+                     </div>
+                     <div class="col-6">
+                         <label class="form-label text-secondary">Last Name</label>
+                         <input type="text" class="form-control" formControlName="last_name">
+                     </div>
+                   </div>
+                   <div>
+                    <button class="btn btn-success" (click)="addFields()">+Add Fields</button>
+                   </div>
+                   <h6 class="mb-0 mt-4 text-secondary">Contact Information</h6>
+                   <hr>
+                   <div formArrayName="contact_Info">
+                    <div *ngFor="let contact of contactInfoControl.controls; let i=index" [formGroupName]="i" >
+                   <div class="row g-3">
+                    <div class="col-12">
+                      <label class="form-label text-secondary">Address</label>
+                      <input type="text" class="form-control" formControlName="address">
+                     </div>
+                     <div class="col-6">
+                        <label class="form-label text-secondary">City</label>
+                        <input type="text" class="form-control" formControlName="city">
+                     </div>
+                     <div class="col-6">
+                      <label class="form-label text-secondary">Country</label>
+                      <input type="text" class="form-control" formControlName="country">
+                    </div>
+                      <div class="col-6">
+                        <label class="form-label text-secondary">Pin Code</label>
+                        <input type="text" class="form-control" formControlName="pin_code">
+                    </div>
+                    <div class="col-6">
+                        <label class="form-label text-secondary">Last Name</label>
+                        <input type="text" class="form-control" formControlName="last_name">
+                    </div>
+                    </div>
+                </div>
+                </div>
+                    <div class="text-start mt-3">
+                      <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
+                    </div>
+                    <pre>{{ user_Info.value | json }}</pre>
+                    </form>
+
+                    
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
